<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="device_cloud_phone">云手机</string>
  <string name="device_resolution">清晰度</string>
  <string name="device_resolution_super">超清\n720p</string>
  <string name="device_resolution_high">高清\n540p</string>
  <string name="device_resolution_common">普清\n360p</string>
  <string name="device_resolution_auto">智能\n自动选择</string>
  <string name="device_voice_on">开启声音</string>
  <string name="device_voice_off">关闭声音</string>
  <string name="device_show_keys">显示虚拟按键</string>
  <string name="device_hide_keys">隐藏虚拟按键</string>
  <string name="device_reboot">重启设备</string>
  <string name="device_exit">退出设备</string>

  <string name="connect_progressing">加速连接云手机...</string>
  <string name="connect_retry">正在重新连接...</string>
  <string name="connect_net_tips">连接断开，请检查网络后重新连接</string>
  <string name="connect_net_error">当前网络异常，请检查网络后重新连接</string>


  <string name="app_name">易控</string>
  <string name="app_name_dev">易控测试版</string>

  <!-- 主页 -->
  <string name="main_poem">迟日江山丽，春风花草香</string>
  <string name="main_float_permission">请授予悬浮窗权限，否则软件无法使用</string>
  <string name="main_float_permission_button">前往设置</string>
  <string name="main_scan_device_list">找到以下地址(点击复制)</string>
  <string name="main_scan_device_local">本机</string>
  <string name="main_device_type_network">无线连接</string>
  <string name="main_device_type_link">有线连接</string>

  <!-- 设置页面 -->
  <string name="set_other_custom_key">自定义密钥</string>
  <string name="set_other_reset_key">重置密钥</string>
  <string name="set_other_ip">查看本机IP</string>
  <string name="set_other_locale">语言切换(中文/English)</string>
  <string name="set_about_active">取消激活</string>
  <string name="set_about_website">项目主页</string>
  <string name="set_about_privacy">隐私政策</string>
  <string name="set_about_version">版本: </string>

  <!-- 查看IP地址页面 -->
  <string name="ip_ipv4">IPv4(点击复制)</string>
  <string name="ip_ipv6">IPv6(点击复制)</string>

  <!-- 查看密钥页面 -->
  <string name="adb_key_pub">公钥(Base64编码)</string>
  <string name="adb_key_pri">私钥(Base64编码)</string>
  <string name="adb_key_button">保存</string>

  <!-- 激活页面 -->
  <string name="active_url">前往捐赠地址</string>
  <string name="active_key">捐赠订单号: 35元及以上</string>
  <string name="active_button">激活</string>
  <string name="active_hint">
    * 捐赠后将于24小时内录入系统，请耐心等待 \n
    * 易控是买断制，不限制使用数量，但为了防止盗刷，单账号默认限制5台设备 \n
    * 为了保护您的隐私，易控使用了随机数标识一台设备，这意味着重装软件也会被视为新设备 \n
    * 如果您无法激活，请联系我 \n
    * 邮箱：mingzhixian@outlook.com \n
    * QQ：1963402801
  </string>

  <!-- 设备添加页面 -->
  <string name="device_uuid">点击复制设备ID</string>
  <string name="device_name">设备名称</string>
  <string name="device_name_hint">不可为空</string>
  <string name="device_address">地址:端口号</string>
  <string name="device_address_hint">支持IPv4/v6地址、域名</string>

  <string name="device_on_connect">连接时操作</string>
  <string name="device_custom_resolution_on_connect">连接时修改分辨率</string>
  <string name="device_custom_resolution_on_connect_detail">手动设置分辨率，设置此项后“运行时自适应分辨率”功能失效</string>
  <string name="device_wake_on_connect">连接时自动唤醒</string>
  <string name="device_wake_on_connect_detail">连接成功后自动唤醒被控端</string>
  <string name="device_light_off_on_connect">连接时关闭背光</string>
  <string name="device_light_off_on_connect_detail">连接成功后自动关闭被控端屏幕</string>
  <string name="device_show_nav_bar_on_connect">打开导航栏显示</string>
  <string name="device_show_nav_bar_on_connect_detail">设置小窗和全屏模式默认是否显示导航栏</string>
  <string name="device_change_to_full_on_connect">默认全屏启动</string>
  <string name="device_change_to_full_on_connect_detail">开启后在连接成功后直接进入全屏状态</string>

  <string name="device_on_running">运行时操作</string>
  <string name="device_keep_wake_on_running">被控端保持唤醒</string>
  <string name="device_keep_wake_on_running_detail">运行过程中被控端不锁定（修改锁定时间）</string>
  <string name="device_change_resolution_on_running">自适应分辨率</string>
  <string name="device_change_resolution_on_running_detail">开启后会自动修改被控端分辨率以适应窗口大小，可能会无法自动恢复(可手动恢复)，慎重考虑</string>
  <string name="device_small_to_mini_on_running">小窗自动挂起</string>
  <string name="device_small_to_mini_on_running_detail">触摸小窗以外位置时自动最小化</string>
  <string name="device_full_to_mini_on_running">全屏挂起为Mini栏</string>
  <string name="device_full_to_mini_on_running_detail">非手动操作退出全屏时，挂起为Mini栏，默认为挂起为小窗</string>
  <string name="device_mini_timeout_on_running">挂起后自动恢复</string>
  <string name="device_mini_timeout_on_running_detail">在触发自动挂起后5秒内无操作自动恢复为原模式</string>

  <string name="device_on_close">断开时操作</string>
  <string name="device_lock_on_close">断开时自动锁定</string>
  <string name="device_lock_on_close_detail">断开时自动锁定被控端</string>
  <string name="device_light_on_close">断开时自动恢复背光</string>
  <string name="device_light_on_close_detail">断开时自动恢复被控端背光（若启用了自动锁定，则此功能可开可关）</string>
  <string name="device_reconnect_on_close">自动重连</string>
  <string name="device_reconnect_on_close_detail">当意外断开时，自动重新连接（因有线设备需要重新授权，所以无法自动重连）</string>

  <string name="device_option">参数</string>
  <string name="device_is_audio">音频</string>
  <string name="device_is_audio_detail">被控端需要安卓12之上</string>
  <string name="device_max_size">最大大小</string>
  <string name="device_max_size_detail">设置画面的最大大小</string>
  <string name="device_max_fps">最大帧率</string>
  <string name="device_max_fps_detail">最大帧率限制，值越低画面越卡顿</string>
  <string name="device_max_video_bit">最大码率</string>
  <string name="device_max_video_bit_detail">码率越大视频损失越小体积越大，建议设置为4，过高会导致延迟增加</string>
  <string name="device_use_h265">使用H265</string>
  <string name="device_use_h265_detail">使用H265，视频体积小延迟低，若画面异常可尝试关闭</string>
  <string name="device_connect_on_start">软件启动时打开</string>
  <string name="device_connect_on_start_detail">软件启动时自动连接该设备，可以设置多个设备自启动</string>

  <string name="device_button">确认</string>

  <!-- 设备设置模块 -->
  <string name="set_device_title">干什么◔ ‸◔?</string>
  <string name="set_device_button_change">修改</string>
  <string name="set_device_button_start_wireless">打开无线</string>
  <string name="set_device_button_recover">恢复分辨率</string>
  <string name="set_device_button_delete">删除</string>

  <!-- 加载中模块 -->
  <string name="loading_text">加加加加载中</string>

  <!-- 提示文本 -->
  <string name="toast_change_locale">Ok, you may need to restart the APP</string>
  <string name="toast_copy">已复制</string>
  <string name="toast_success">成功</string>
  <string name="toast_fail">失败</string>
  <string name="toast_no_browser">没有默认浏览器</string>
  <string name="toast_address_error">地址格式错误</string>
  <string name="toast_timeout">超时</string>
  <string name="toast_connect_server">连接被控端失败</string>
  <string name="toast_stream_closed">连接断开</string>

</resources>